another fix for horizontal scrolling on mobiles

--- a/style.css
+++ b/style.css
@@ -789,16 +789,16 @@ footer {
 }
 
 @media all and (max-width: 414px) {
-    html,
     body {
         width: 100%;
-        height: 100%;
-        margin: 0;
-        overflow-x: hidden;
-        position: absolute;
-        top: 0;
-        left: 0;
+        position: relative;
     }
+
+    html,
+    body {
+        overflow-x: hidden;
+    }
+
 
     .pages {
         display: flex;
